redesigned to one web page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <link href="css/font-awesome.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/modern-business.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">  
     
     <!-- Favicon-->
@@ -38,9 +37,6 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a href = "index.html"><img id = "logo" src="media/logo.png" class="img-fluid" alt="Responsive image"></a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li>
@@ -61,79 +57,88 @@
 
     <!-- Page Content -->
     <div class="container">
-
+      <br>
       <!-- Portfolio Section -->
-      <h1 class="mt-4 mb-3">Featured Projects
-        </h1>
-
+      <h3>Featured Projects</h3>
+      <hr>
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="thelibyrinth.html"><img class="card-img-top" src="media/libyrinth/image13.png" alt="The Libyrinth"></a>
+            <img class="card-img-top" src="media/libyrinth.png" alt="The Libyrinth">
             <div class="card-body">
-              <h4 class="card-title">
-                <a href="thelibyrinth.html">The Libyrinth</a>
-              </h4>
-              <p class="card-text">Librarians stalk the halls in search of you! Sneak through the library and don’t get caught. Traps are scattered throughout the maze, and stepping on them will make noise and attract the librarian’s attention. </p>
+              <h4 class="card-title">The Libyrinth</h4>
+              <p class="card-text">Team Project: Lead Artist</p>
+              <p class="card-text">Librarians stalk the halls in search of you! Sneak through the library and don’t get caught.</p>
+              <p class="card-text"> C#, Unity, Blender, Photoshop </p>
+                <a class="btn btn-primary" href="https://youtu.be/i5BB6Fa43lk">Video Demo
+                  <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="firefightingfoxfinders.html"><img class="card-img-top" src="media/FFFMiniImage.png" alt="Firefighting Fox Finders"></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="firefightingfoxfinders.html">Firefighting Fox Finders</a>
-              </h4>
-              <p class="card-text">The forest is on fire! Foxes are scattered throughout the forest in need of your help. Carefully maneuver around the fire to pick up the foxes to save them. Dont worry - you can put out the fires for a short time.</p>
+            <div class="col-lg-4 col-sm-6 portfolio-item">
+              <div class="card h-100">
+                <img class="card-img-top" src="media/HogsImage2.png" alt="Hidden Object Game">
+                <div class="card-body">
+                  <h4 class="card-title">Birthday Enchantment Hidden Objects Game</h4>
+                  <p class="card-text">Team Project: Technical Artist</p>
+                  <p class="card-text">Search and collect all the hidden objects to reveal your special message. </p>
+                  <p class="card-text"> TypeScript, PIXI.JS, Greensock.JS, Photoshop </p>
+                  <a class="btn btn-primary" href="https://www.bluemountain.com/ecards/seasonal/birthday-enchantment-hidden-objects-game/card-3488749">View eCard
+                    <span class="glyphicon glyphicon-chevron-right"></span></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 portfolio-item">
+              <div class="card h-100">
+                <img class="card-img-top" src="media/HogsImage.png" alt="Hidden Object Game">
+                <div class="card-body">
+                  <h4 class="card-title">Enchanted Courtyard Hidden Object Game</h4>
+                  <p class="card-text">Team Project: Technical Artist</p>
+                  <p class="card-text">Search and collect all the hidden objects to reveal your special message.</p>
+                  <p class="card-text"> TypeScript, PIXI.JS, Greensock.JS, Photoshop </p>
+                  <a class="btn btn-primary" href="https://www.bluemountain.com/ecards/birthday/enchanted-courtyard-hidden-objects-game/card-3468356">View eCard
+                    <span class="glyphicon glyphicon-chevron-right"></span></a>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="helloworld.html"><img class="card-img-top" src="media/HelloWorldMiniImage.png" alt="Hello World"></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="helloworld.html">Hello, World</a>
-              </h4>
-              <p class="card-text">In a cold and desolate factory, you play as a cute little robot, distraught from all the programming bugs that are messing up your system! With no one around to help, you are on your own to save yourself as you access your console and fix the code.</p>
-            </div>
-          </div>
-        </div>
-      </div>
+
       <!-- /.row -->
-
       <div class="row">
           <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="hiddenobjectgame2.html"><img class="card-img-top" src="media/HogsImage2.png" alt="Hidden Object Game"></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="hiddenobjectgame2.html">Birthday Enchantment Hidden Objects Game</a>
-                </h4>
-                <p class="card-text">Search and collect all the hidden objects to reveal your special message. </p>
+              <div class="card h-100">
+                <img class="card-img-top" src="media/FFFMiniImage.png" alt="Firefighting Fox Finders">
+                <div class="card-body">
+                  <h4 class="card-title">Firefighting Fox Finders</h4>
+                  <p class="card-text">Team Project: Lead Artist</p>
+                  <p class="card-text">The forest is on fire! Foxes are scattered throughout the forest in need of your help.</p>
+                  <p class="card-text"> C#, Unity, Blender, Photoshop </p>
+                    <a class="btn btn-primary" href="https://www.youtube.com/watch?time_continue=1&v=8bXgioN3e-o">Video Demo
+                      <span class="glyphicon glyphicon-chevron-right"></span></a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="hiddenobjectgame.html"><img class="card-img-top" src="media/HogsImage.png" alt="Hidden Object Game"></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="hiddenobjectgame.html">Enchanted Courtyard Hidden Object Game</a>
-                </h4>
-                <p class="card-text">Search and collect all the hidden objects to reveal your special message.</p>
+            <div class="col-lg-4 col-sm-6 portfolio-item">
+              <div class="card h-100">
+                <img class="card-img-top" src="media/HelloWorldMiniImage.png" alt="Hello World">
+                <div class="card-body">
+                  <h4 class="card-title">Hello, World</h4>
+                  <p class="card-text">Team Project: Technical Writer</p>
+                  <p class="card-text">In a cold and desolate factory, you play as a cute little robot, distraught from all the programming bugs that are messing up your system!</p>
+                  <p class="card-text"> C#, Monogame, Paint Tool Sai </p>
+                  <a class="btn btn-primary" href="https://people.rit.edu/crn4802/wichacks2017/">View Project
+                    <span class="glyphicon glyphicon-chevron-right"></span></a>
+                </div>
               </div>
             </div>
-          </div>
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <a href="llamainajar.html"><img class="card-img-top" src="media/LlamaJarImage.png" alt="Llama in a Jar Interactive eCard"></a>
+              <img class="card-img-top" src="media/LlamaJarImage.png" alt="Llama in a Jar Interactive eCard">
               <div class="card-body">
-                <h4 class="card-title">
-                  <a href="llamainajar.html">Llama in a Jar Interactive eCard</a>
-                </h4>
+                <h4 class="card-title">Llama in a Jar</h4>
+                <p class="card-text">Solo Project</p>
                 <p class="card-text">An interactive scene where the player can admire a llama from afar.</p>
+                <p class="card-text"> JavaScript, THREE.JS, Blender, Photoshop </p>
               </div>
             </div>
           </div>
@@ -145,16 +150,14 @@
       <!-- Call to Action Section -->
       <div class="row mb-4">
         <div class="col-md-8">
-            <h2 class="mt-4 mb-3">About
-                <small>Alexia Bernardo</small>
-              </h2>
+          <h3>Alexia Bernardo</h3>
           <p> Hi. I’m a designer with a curiosity and interest for interactive design. I’m currently a Game Design and Development student at the Rochester Institute of Technology to produce interactive experiences through games.</p>
           <p>I enjoy being the bridge that brings artists and programmers together to ensure that art assets can be easily integrated into a game without sacrificing either the overall artistic vision or exceeding the technical limits of the chosen platform.</p>
-          <a class="btn btn-lg btn-secondary btn-block" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
+          <a class="btn btn-primary" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
         </div> 
         <div class="col-md-4">
             <img class="img-fluid rounded mb-4" src="media/Me.png" alt="Picture of Me">
-            <p class="m-0 text-center">Wallkill, NY</p>
+            <p class="m-0 text-center">Greater New York City Area</p>
             <p class="m-0 text-center"><a href="mailto:me@alexiabernardo.com">me@alexiabernardo.com</a></p>
         </div>
       </div>
@@ -166,13 +169,14 @@
     <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">&copy; 2018 Alexia Bernardo. Framework from <a href="https://getbootstrap.com/">Bootstrap</a>. All Rights Reserved.</p>         
-        
-        <p class="m-0 text-center text-white"><a href= "https://github.com/abernardo97" class="btn btn-social-icon btn-github">
-               <span class="fa fa-github"></span>
-             </a>
-             <a href="https://www.linkedin.com/in/alexiabernardo/" class="btn btn-social-icon btn-linkedin">
-               <span class="fa fa-linkedin"></span>
-             </a></p>   
+        <p class="m-0 text-center text-white">
+          <a href= "https://github.com/abernardo97" class="btn btn-social-icon btn-github">
+            <span class="fa fa-github"></span>
+          </a>
+          <a href="https://www.linkedin.com/in/alexiabernardo/" class="btn btn-social-icon btn-linkedin">
+            <span class="fa fa-linkedin"></span>
+          </a>
+        </p>   
       </div>
       <!-- /.container -->
     </footer>
