--- a/index.html
+++ b/index.html
@@ -133,12 +133,14 @@
             </div>
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <img class="card-img-top" src="media/LlamaJarImage.png" alt="Llama in a Jar Interactive eCard">
+              <img class="card-img-top" src="media/audioVisualizer.png" alt="Audio Visualizer">
               <div class="card-body">
-                <h4 class="card-title">Llama in a Jar</h4>
+                <h4 class="card-title">Audio Visualizer</h4>
                 <p class="card-text">Solo Project</p>
-                <p class="card-text">An interactive scene where the player can admire a llama from afar.</p>
-                <p class="card-text"> JavaScript, THREE.JS, Blender, Photoshop </p>
+                <p class="card-text">An interactive scene where the user can admire music.</p>
+                <p class="card-text"> JavaScript</p>
+                <a class="btn btn-primary" href="https://people.rit.edu/ab4854/330/projects/ProjectOne/audioVisualizer.html">View Project
+                  <span class="glyphicon glyphicon-chevron-right"></span></a>
               </div>
             </div>
           </div>
