--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="revisit-after" content="3 days">
     <meta name="author" content="Alexia Bernardo">
 
-    <title>Alexia Bernardo</title>
+    <title>Alexia Bernardo | Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
