--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
         </div>
       </div>
     </nav>
-    <!-- Navigation end-->
 
     <!-- Page Content -->
     <div class="container">
@@ -61,6 +60,7 @@
       <!-- Portfolio Section -->
       <h3>Featured Projects</h3>
       <hr>
+      <!-- Project Row 1-->
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
@@ -103,7 +103,7 @@
             </div>
           </div>
 
-      <!-- /.row -->
+      <!-- Project Row 2-->
       <div class="row">
           <div class="col-lg-4 col-sm-6 portfolio-item">
               <div class="card h-100">
@@ -145,11 +145,10 @@
             </div>
           </div>
         </div>
-        <!-- /.row -->
 
       <hr>
 
-      <!-- Call to Action Section -->
+      <!-- About Section -->
       <div class="row mb-4">
         <div class="col-md-8">
           <h3>Alexia Bernardo</h3>
@@ -163,9 +162,7 @@
             <p class="m-0 text-center"><a href="mailto:me@alexiabernardo.com">me@alexiabernardo.com</a></p>
         </div>
       </div>
-
     </div>
-    <!-- /.container -->
 
     <!-- Footer -->
     <footer class="py-5 bg-dark">
@@ -180,7 +177,6 @@
           </a>
         </p>   
       </div>
-      <!-- /.container -->
     </footer>
 
    <!-- Bootstrap core JavaScript -->
