--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a href = "index.html"><img id = "logo" src="media/logo.png" class="img-fluid" alt="Responsive image"></a>
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -58,7 +58,7 @@
     <div class="container">
       <br>
       <!-- Portfolio Section -->
-      <h3>Featured Projects</h3>
+      <h3>Projects</h3>
       <hr>
       <!-- Project Row 1-->
       <div class="row">
@@ -70,8 +70,7 @@
               <p class="card-text">Team Project: Lead Artist</p>
               <p class="card-text">Librarians stalk the halls in search of you! Sneak through the library and don’t get caught.</p>
               <p class="card-text"> C#, Unity, Blender, Photoshop </p>
-                <a class="btn btn-primary" href="https://youtu.be/i5BB6Fa43lk">Video Demo
-                  <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="https://youtu.be/i5BB6Fa43lk">Video Demo</a>
             </div>
           </div>
         </div>
@@ -83,8 +82,7 @@
                   <p class="card-text">Team Project: Technical Artist</p>
                   <p class="card-text">Search and collect all the hidden objects to reveal your special message. </p>
                   <p class="card-text"> TypeScript, PIXI.JS, Greensock.JS, Photoshop </p>
-                  <a class="btn btn-primary" href="https://www.bluemountain.com/ecards/seasonal/birthday-enchantment-hidden-objects-game/card-3488749">View eCard
-                    <span class="glyphicon glyphicon-chevron-right"></span></a>
+                  <a class="btn btn-primary" href="https://www.bluemountain.com/ecards/seasonal/birthday-enchantment-hidden-objects-game/card-3488749">View eCard</a>
                 </div>
               </div>
             </div>
@@ -96,8 +94,7 @@
                   <p class="card-text">Team Project: Technical Artist</p>
                   <p class="card-text">Search and collect all the hidden objects to reveal your special message.</p>
                   <p class="card-text"> TypeScript, PIXI.JS, Greensock.JS, Photoshop </p>
-                  <a class="btn btn-primary" href="https://www.bluemountain.com/ecards/birthday/enchanted-courtyard-hidden-objects-game/card-3468356">View eCard
-                    <span class="glyphicon glyphicon-chevron-right"></span></a>
+                  <a class="btn btn-primary" href="https://www.bluemountain.com/ecards/birthday/enchanted-courtyard-hidden-objects-game/card-3468356">View eCard</a>
                 </div>
               </div>
             </div>
@@ -113,8 +110,7 @@
                   <p class="card-text">Team Project: Lead Artist</p>
                   <p class="card-text">The forest is on fire! Foxes are scattered throughout the forest in need of your help.</p>
                   <p class="card-text"> C#, Unity, Blender, Photoshop </p>
-                    <a class="btn btn-primary" href="https://www.youtube.com/watch?time_continue=1&v=8bXgioN3e-o">Video Demo
-                      <span class="glyphicon glyphicon-chevron-right"></span></a>
+                    <a class="btn btn-primary" href="https://www.youtube.com/watch?time_continue=1&v=8bXgioN3e-o">Video Demo</a>
                 </div>
               </div>
             </div>
@@ -126,8 +122,7 @@
                   <p class="card-text">Team Project: Technical Writer</p>
                   <p class="card-text">In a cold and desolate factory, you play as a cute little robot, distraught from all the programming bugs that are messing up your system!</p>
                   <p class="card-text"> C#, Monogame, Paint Tool Sai </p>
-                  <a class="btn btn-primary" href="https://people.rit.edu/crn4802/wichacks2017/">View Project
-                    <span class="glyphicon glyphicon-chevron-right"></span></a>
+                  <a class="btn btn-primary" href="https://people.rit.edu/crn4802/wichacks2017/">View Project</a>
                 </div>
               </div>
             </div>
@@ -139,8 +134,7 @@
                 <p class="card-text">Solo Project</p>
                 <p class="card-text">An interactive scene where the user can admire music.</p>
                 <p class="card-text"> JavaScript</p>
-                <a class="btn btn-primary" href="https://people.rit.edu/ab4854/330/projects/ProjectOne/audioVisualizer.html">View Project
-                  <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="https://people.rit.edu/ab4854/330/projects/ProjectOne/audioVisualizer.html">View Project</a>
               </div>
             </div>
           </div>
@@ -165,8 +159,8 @@
     </div>
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
+    <footer class= "py-5">
+      <div class="footer">
         <p class="m-0 text-center text-white">&copy; 2018 Alexia Bernardo. Framework from <a href="https://getbootstrap.com/">Bootstrap</a>. All Rights Reserved.</p>         
         <p class="m-0 text-center text-white">
           <a href= "https://github.com/abernardo97" class="btn btn-social-icon btn-github">
