updated footer and me.png

--- a/index.html
+++ b/index.html
@@ -141,34 +141,38 @@
 
       <hr>
 
-      <!-- About Section -->
+    <!-- About Section -->
+    <div class = "container">
       <div class="row mb-4">
-        <div class="col-md-8">
-          <h3>Alexia Bernardo</h3>
-          <p> Hi. I’m a designer with a curiosity and interest for interactive design. I’m currently a Game Design and Development student at the Rochester Institute of Technology to produce interactive experiences through games.</p>
-          <p>I enjoy being the bridge that brings artists and programmers together to ensure that art assets can be easily integrated into a game without sacrificing either the overall artistic vision or exceeding the technical limits of the chosen platform.</p>
-          <a class="btn btn-primary" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
-        </div> 
-        <div class="col-md-4">
-            <img class="img-fluid rounded mb-4" src="media/Me.png" alt="Picture of Me">
-            <p class="m-0 text-center">Greater New York City Area</p>
-            <p class="m-0 text-center"><a href="mailto:me@alexiabernardo.com">me@alexiabernardo.com</a></p>
+          <div class="col-md-8">
+            <h3>Alexia Bernardo</h3>
+            <p> Hi. I’m a designer with a curiosity and interest for interactive design. I’m currently a Game Design and Development student at the Rochester Institute of Technology to produce interactive experiences through games.</p>
+            <p>I enjoy being the bridge that brings artists and programmers together to ensure that art assets can be easily integrated into a game without sacrificing either the overall artistic vision or exceeding the technical limits of the chosen platform.</p>
+            <a class="btn btn-primary" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
+          </div> 
+          <div class="col-md-4 text-center">
+              <img class="img-fluid rounded-circle mb-4 me" src="media/me.jpg" alt="Picture of Me">
+              <p class="m-0">Orange County, NY</p>
+              <p class="m-0"><a href="mailto:me@alexiabernardo.com">me@alexiabernardo.com</a></p>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- Footer -->
-    <footer class= "py-5">
-      <div class="footer">
-        <p class="m-0 text-center text-white">&copy; 2018 Alexia Bernardo. Framework from <a href="https://getbootstrap.com/">Bootstrap</a>. All Rights Reserved.</p>         
-        <p class="m-0 text-center text-white">
-          <a href= "https://github.com/abernardo97" class="btn btn-social-icon btn-github">
-            <span class="fa fa-github"></span>
-          </a>
-          <a href="https://www.linkedin.com/in/alexiabernardo/" class="btn btn-social-icon btn-linkedin">
-            <span class="fa fa-linkedin"></span>
-          </a>
-        </p>   
+    <footer class= "py-5 footer">
+      <div class= "container">
+          <p class="m-0 text-right text-white">
+              <a href= "https://github.com/abernardo97" class="btn btn-social-icon btn-github">
+                <span class="fa fa-github"></span>
+              </a>
+              <a href="https://www.linkedin.com/in/alexiabernardo/" class="btn btn-social-icon btn-linkedin">
+                <span class="fa fa-linkedin"></span>
+              </a>
+            </p>  
+        <p class="m-0 text-right text-white"><a href="mailto:me@alexiabernardo.com">Contact</a> |<a href="media/AlexiaBernardoResume.pdf"> Resume</a></p>
+        <p class="m-0 text-right text-white">&copy; 2019 Alexia Bernardo. All Rights Reserved.</p>  
+        <p class="m-0 text-right text-white">Framework from <a href="https://getbootstrap.com/">Bootstrap.</a></p>              
       </div>
     </footer>
 
