edit team roles

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <img class="card-img-top" src="media/libyrinth.png" alt="The Libyrinth">
             <div class="card-body">
               <h4 class="card-title">The Libyrinth</h4>
-              <p class="card-text">Team Project: Lead Artist</p>
+              <h6 class="card-subtitle mb-2 text-muted">Project Manager, Lead Artist</h6>
               <p class="card-text">Librarians stalk the halls in search of you! Sneak through the library and don’t get caught.</p>
               <p class="card-text"> C#, Unity, Blender, Photoshop </p>
                 <a class="btn btn-primary" href="https://youtu.be/i5BB6Fa43lk">Video Demo</a>
@@ -78,7 +78,7 @@
                 <img class="card-img-top" src="media/HogsImage2.png" alt="Hidden Object Game">
                 <div class="card-body">
                   <h4 class="card-title">Birthday Enchantment Hidden Objects Game</h4>
-                  <p class="card-text">Team Project: Technical Artist</p>
+                  <h6 class="card-subtitle mb-2 text-muted">Technical Artist</h6>
                   <p class="card-text">Search and collect all the hidden objects to reveal your special message. </p>
                   <p class="card-text"> TypeScript, PIXI.JS, Greensock.JS, Photoshop </p>
                   <a class="btn btn-primary" href="https://www.bluemountain.com/ecards/seasonal/birthday-enchantment-hidden-objects-game/card-3488749">View eCard</a>
@@ -90,7 +90,7 @@
                 <img class="card-img-top" src="media/HogsImage.png" alt="Hidden Object Game">
                 <div class="card-body">
                   <h4 class="card-title">Enchanted Courtyard Hidden Object Game</h4>
-                  <p class="card-text">Team Project: Technical Artist</p>
+                  <h6 class="card-subtitle mb-2 text-muted">Technical Artist</h6>
                   <p class="card-text">Search and collect all the hidden objects to reveal your special message.</p>
                   <p class="card-text"> TypeScript, PIXI.JS, Greensock.JS, Photoshop </p>
                   <a class="btn btn-primary" href="https://www.bluemountain.com/ecards/birthday/enchanted-courtyard-hidden-objects-game/card-3468356">View eCard</a>
@@ -106,7 +106,7 @@
                 <img class="card-img-top" src="media/FFFMiniImage.png" alt="Firefighting Fox Finders">
                 <div class="card-body">
                   <h4 class="card-title">Firefighting Fox Finders</h4>
-                  <p class="card-text">Team Project: Lead Artist</p>
+                  <h6 class="card-subtitle mb-2 text-muted">Lead Artist</h6>
                   <p class="card-text">The forest is on fire! Foxes are scattered throughout the forest in need of your help.</p>
                   <p class="card-text"> C#, Unity, Blender, Photoshop </p>
                     <a class="btn btn-primary" href="https://www.youtube.com/watch?time_continue=1&v=8bXgioN3e-o">Video Demo</a>
@@ -118,7 +118,7 @@
                 <img class="card-img-top" src="media/HelloWorldMiniImage.png" alt="Hello World">
                 <div class="card-body">
                   <h4 class="card-title">Hello, World</h4>
-                  <p class="card-text">Team Project: Technical Writer</p>
+                  <h6 class="card-subtitle mb-2 text-muted">Technical Writer</h6>
                   <p class="card-text">In a cold and desolate factory, you play as a cute little robot, distraught from all the programming bugs that are messing up your system!</p>
                   <p class="card-text"> C#, Monogame, Paint Tool Sai </p>
                   <a class="btn btn-primary" href="https://people.rit.edu/crn4802/wichacks2017/">View Project</a>
@@ -130,7 +130,7 @@
               <img class="card-img-top" src="media/audioVisualizer.png" alt="Audio Visualizer">
               <div class="card-body">
                 <h4 class="card-title">Audio Visualizer</h4>
-                <p class="card-text">Solo Project</p>
+                <h6 class="card-subtitle mb-2 text-muted">Solo</h6>
                 <p class="card-text">An interactive scene where the user can admire music.</p>
                 <p class="card-text"> JavaScript</p>
                 <a class="btn btn-primary" href="https://people.rit.edu/ab4854/330/projects/ProjectOne/audioVisualizer.html">View Project</a>
