updated about section css

--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
           </div>
         </div>
 
-      <hr>
-
     <!-- About Section -->
     <div class = "container">
-      <div class="row mb-4">
+        <h3>About Me</h3>
+        <hr>
+      <div class="row mb-4 about">
           <div class="col-md-8">
-            <h3>Alexia Bernardo</h3>
-            <p> Hi. I’m a designer with a curiosity and interest for interactive design. I’m currently a Game Design and Development student at the Rochester Institute of Technology to produce interactive experiences through games.</p>
+            <h5>Alexia Bernardo</h5>
+            <p> Hi. I’m currently a Game Design and Development student at the Rochester Institute of Technology to produce interactive experiences through games.</p>
             <p>I enjoy being the bridge that brings artists and programmers together to ensure that art assets can be easily integrated into a game without sacrificing either the overall artistic vision or exceeding the technical limits of the chosen platform.</p>
             <a class="btn btn-primary" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
           </div> 
