--- a/index.html
+++ b/index.html
@@ -39,12 +39,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li>
-               <a href= "https://github.com/abernardo97" class="btn btn-social-icon btn-github">
+               <a href= "https://github.com/abernardo97" class="btn btn-outline-light rounded-circle btn-social-icon btn-github">
                   <span class="fa fa-github"></span>
                 </a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/alexiabernardo/" class="btn btn-social-icon btn-linkedin">
+                <a href="https://www.linkedin.com/in/alexiabernardo/" class="btn rounded-circle btn-outline-light btn-social-icon btn-linkedin">
                   <span class="fa fa-linkedin"></span>
                 </a>
             </li>
@@ -62,38 +60,38 @@
       <!-- Project Row 1-->
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
+          <div class="card border border-white h-100">
             <img class="card-img-top" src="media/libyrinth.png" alt="The Libyrinth">
             <div class="card-body">
               <h4 class="card-title">The Libyrinth</h4>
               <h6 class="card-subtitle mb-2 text-muted">Project Manager, Lead Artist</h6>
               <p class="card-text">Librarians stalk the halls in search of you! Sneak through the library and don’t get caught.</p>
               <p class="card-text"> C#, Unity, Blender, Photoshop </p>
-                <a class="btn btn-primary" href="https://youtu.be/i5BB6Fa43lk">Video Demo</a>
+                <a class="btn btn-primary btn-outline-light" href="https://youtu.be/i5BB6Fa43lk">Video Demo</a>
             </div>
           </div>
         </div>
             <div class="col-lg-4 col-sm-6 portfolio-item">
-              <div class="card h-100">
+              <div class="card border-white h-100">
                 <img class="card-img-top" src="media/HogsImage2.png" alt="Hidden Object Game">
                 <div class="card-body">
                   <h4 class="card-title">Birthday Enchantment Hidden Objects Game</h4>
                   <h6 class="card-subtitle mb-2 text-muted">Technical Artist</h6>
                   <p class="card-text">Search and collect all the hidden objects to reveal your special message. </p>
                   <p class="card-text"> TypeScript, PIXI.JS, Greensock.JS, Photoshop </p>
-                  <a class="btn btn-primary" href="https://www.bluemountain.com/ecards/seasonal/birthday-enchantment-hidden-objects-game/card-3488749">View eCard</a>
+                  <a class="btn btn-primary btn-outline-light" href="https://www.bluemountain.com/ecards/seasonal/birthday-enchantment-hidden-objects-game/card-3488749">View eCard</a>
                 </div>
               </div>
             </div>
             <div class="col-lg-4 col-sm-6 portfolio-item">
-              <div class="card h-100">
+              <div class="card border-white h-100">
                 <img class="card-img-top" src="media/HogsImage.png" alt="Hidden Object Game">
                 <div class="card-body">
                   <h4 class="card-title">Enchanted Courtyard Hidden Object Game</h4>
                   <h6 class="card-subtitle mb-2 text-muted">Technical Artist</h6>
                   <p class="card-text">Search and collect all the hidden objects to reveal your special message.</p>
                   <p class="card-text"> TypeScript, PIXI.JS, Greensock.JS, Photoshop </p>
-                  <a class="btn btn-primary" href="https://www.bluemountain.com/ecards/birthday/enchanted-courtyard-hidden-objects-game/card-3468356">View eCard</a>
+                  <a class="btn btn-primary btn-outline-light" href="https://www.bluemountain.com/ecards/birthday/enchanted-courtyard-hidden-objects-game/card-3468356">View eCard</a>
                 </div>
               </div>
             </div>
@@ -102,38 +100,38 @@
       <!-- Project Row 2-->
       <div class="row">
           <div class="col-lg-4 col-sm-6 portfolio-item">
-              <div class="card h-100">
+              <div class="card border-white h-100">
                 <img class="card-img-top" src="media/FFFMiniImage.png" alt="Firefighting Fox Finders">
                 <div class="card-body">
                   <h4 class="card-title">Firefighting Fox Finders</h4>
                   <h6 class="card-subtitle mb-2 text-muted">Lead Artist</h6>
                   <p class="card-text">The forest is on fire! Foxes are scattered throughout the forest in need of your help.</p>
                   <p class="card-text"> C#, Unity, Blender, Photoshop </p>
-                    <a class="btn btn-primary" href="https://www.youtube.com/watch?time_continue=1&v=8bXgioN3e-o">Video Demo</a>
+                    <a class="btn btn-primary btn-outline-light" href="https://www.youtube.com/watch?time_continue=1&v=8bXgioN3e-o">Video Demo</a>
                 </div>
               </div>
             </div>
             <div class="col-lg-4 col-sm-6 portfolio-item">
-              <div class="card h-100">
+              <div class="card border-white h-100">
                 <img class="card-img-top" src="media/HelloWorldMiniImage.png" alt="Hello World">
                 <div class="card-body">
                   <h4 class="card-title">Hello, World</h4>
                   <h6 class="card-subtitle mb-2 text-muted">Technical Writer</h6>
                   <p class="card-text">In a cold and desolate factory, you play as a cute little robot, distraught from all the programming bugs that are messing up your system!</p>
                   <p class="card-text"> C#, Monogame, Paint Tool Sai </p>
-                  <a class="btn btn-primary" href="https://people.rit.edu/crn4802/wichacks2017/">View Project</a>
+                  <a class="btn btn-primary btn-outline-light" href="https://people.rit.edu/crn4802/wichacks2017/">View Project</a>
                 </div>
               </div>
             </div>
           <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
+            <div class="card border-white h-100">
               <img class="card-img-top" src="media/audioVisualizer.png" alt="Audio Visualizer">
               <div class="card-body">
                 <h4 class="card-title">Audio Visualizer</h4>
                 <h6 class="card-subtitle mb-2 text-muted">Solo</h6>
                 <p class="card-text">An interactive scene where the user can admire music.</p>
                 <p class="card-text"> JavaScript</p>
-                <a class="btn btn-primary" href="https://people.rit.edu/ab4854/330/projects/ProjectOne/audioVisualizer.html">View Project</a>
+                <a class="btn btn-primary btn-outline-light" href="https://people.rit.edu/ab4854/330/projects/ProjectOne/audioVisualizer.html">View Project</a>
               </div>
             </div>
           </div>
@@ -148,7 +146,7 @@
             <h5>Alexia Bernardo</h5>
             <p> Hi. I’m currently a Game Design and Development student at the Rochester Institute of Technology to produce interactive experiences through games.</p>
             <p>I enjoy being the bridge that brings artists and programmers together to ensure that art assets can be easily integrated into a game without sacrificing either the overall artistic vision or exceeding the technical limits of the chosen platform.</p>
-            <a class="btn btn-primary" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
+            <a class="btn btn-primary btn-outline-light" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
           </div> 
           <div class="col-md-4 text-center">
               <img class="img-fluid rounded-circle mb-4 me" src="media/me.jpg" alt="Picture of Me">
@@ -163,10 +161,10 @@
     <footer class= "py-5 footer">
       <div class= "container">
           <p class="m-0 text-right text-white">
-              <a href= "https://github.com/abernardo97" class="btn btn-social-icon btn-github">
+              <a href= "https://github.com/abernardo97" class="btn rounded-circle btn-outline-light btn-social-icon btn-github">
                 <span class="fa fa-github"></span>
               </a>
-              <a href="https://www.linkedin.com/in/alexiabernardo/" class="btn btn-social-icon btn-linkedin">
+              <a href="https://www.linkedin.com/in/alexiabernardo/" class="btn rounded-circle btn-outline-light btn-social-icon btn-linkedin">
                 <span class="fa fa-linkedin"></span>
               </a>
             </p>  
