--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card border border-white h-100">
             <img class="card-img-top" src="media/libyrinth.png" alt="The Libyrinth">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://youtu.be/i5BB6Fa43lk" allowfullscreen></iframe>
+              </div>
             <div class="card-body">
               <h4 class="card-title">The Libyrinth</h4>
               <h6 class="card-subtitle mb-2 text-muted">Project Manager, Lead Artist</h6>
@@ -102,6 +105,9 @@
           <div class="col-lg-4 col-sm-6 portfolio-item">
               <div class="card border-white h-100">
                 <img class="card-img-top" src="media/FFFMiniImage.png" alt="Firefighting Fox Finders">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?time_continue=1&v=8bXgioN3e-o" allowfullscreen></iframe>
+                  </div>
                 <div class="card-body">
                   <h4 class="card-title">Firefighting Fox Finders</h4>
                   <h6 class="card-subtitle mb-2 text-muted">Lead Artist</h6>
@@ -149,7 +155,7 @@
             <a class="btn btn-primary btn-outline-light" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
           </div> 
           <div class="col-md-4 text-center">
-              <img class="img-fluid rounded-circle mb-4 me" src="media/me.jpg" alt="Picture of Me">
+              <img class="img-fluid img-thumbnail border-secondary  rounded-circle mb-4 me" src="media/me.jpg" alt="Picture of Me">
               <p class="m-0">Orange County, NY</p>
               <p class="m-0"><a href="mailto:me@alexiabernardo.com">me@alexiabernardo.com</a></p>
           </div>
