fixed embedded links

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card border border-white h-100">
-            <img class="card-img-top" src="media/libyrinth.png" alt="The Libyrinth">
+           <!-- <img class="card-img-top" src="media/libyrinth.png" alt="The Libyrinth">-->
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://youtu.be/i5BB6Fa43lk" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/i5BB6Fa43lk" allowfullscreen></iframe>
               </div>
             <div class="card-body">
               <h4 class="card-title">The Libyrinth</h4>
@@ -104,9 +104,9 @@
       <div class="row">
           <div class="col-lg-4 col-sm-6 portfolio-item">
               <div class="card border-white h-100">
-                <img class="card-img-top" src="media/FFFMiniImage.png" alt="Firefighting Fox Finders">
+               <!-- <img class="card-img-top" src="media/FFFMiniImage.png" alt="Firefighting Fox Finders">-->
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?time_continue=1&v=8bXgioN3e-o" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8bXgioN3e-o" allowfullscreen></iframe>
                   </div>
                 <div class="card-body">
                   <h4 class="card-title">Firefighting Fox Finders</h4>
