extra padding under resume button

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <h5>Alexia Bernardo</h5>
             <p> Hi. I’m currently a Game Design and Development student at the Rochester Institute of Technology to produce interactive experiences through games.</p>
             <p>I enjoy being the bridge that brings artists and programmers together to ensure that art assets can be easily integrated into a game without sacrificing either the overall artistic vision or exceeding the technical limits of the chosen platform.</p>
-            <a class="btn btn-primary btn-outline-light" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
+            <a class="btn btn-primary btn-outline-light resumeButton" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
           </div> 
           <div class="col-md-4 text-center">
               <img class="img-fluid img-thumbnail border-secondary  rounded-circle mb-4 me" src="media/me.jpg" alt="Picture of Me">
