--- a/index.html
+++ b/index.html
@@ -141,7 +141,32 @@
               </div>
             </div>
           </div>
+      
+    <!-- Project Row 3-->
+    <div class="row">
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card border-white h-100">
+            <img class="card-img-top" src="media/saltwaterShowdown.png" alt=" Saltwater Showdown">
+            <div class="card-body">
+              <h4 class="card-title">Saltwater Showdown</h4>
+              <h6 class="card-subtitle mb-2 text-muted">Lead Artist</h6>
+              <p class="card-text">Sea creatures are out of control! It's up to you to stop them by hitting them with sea urchins.</p>
+              <p class="card-text"> C#, Unity, Photoshop, Paint Tool Sai</p>
+            </div>
+          </div>
         </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card border-white h-100">
+            <img class="card-img-top" src="media/LlamaJarNormal.png" alt=" Llama Card">
+            <div class="card-body">
+              <h4 class="card-title">Llama in a Jar</h4>
+              <h6 class="card-subtitle mb-2 text-muted">Solo</h6>
+              <p class="card-text">An interactive scene to admire a llama from afar.</p>
+              <p class="card-text"> JavaScript, Three.JS, Blender</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <!-- About Section -->
     <div class = "container">
