--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
               </div>
             </div>
           </div>
+        </div>
       
     <!-- Project Row 3-->
     <div class="row">
