added drawing app

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card border-white h-100">
-            <img class="card-img-top" src="media/saltwaterShowdown.png" alt=" Saltwater Showdown">
+            <img class="card-img-top" src="media/saltwaterShowdown.png" alt="Saltwater Showdown">
             <div class="card-body">
               <h4 class="card-title">Saltwater Showdown</h4>
               <h6 class="card-subtitle mb-2 text-muted">Lead Artist</h6>
@@ -158,12 +158,24 @@
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card border-white h-100">
-            <img class="card-img-top" src="media/LlamaJarNormal.png" alt=" Llama Card">
+            <img class="card-img-top" src="media/LlamaJarNormal.png" alt="Llama Card">
             <div class="card-body">
               <h4 class="card-title">Llama in a Jar</h4>
               <h6 class="card-subtitle mb-2 text-muted">Solo</h6>
               <p class="card-text">An interactive scene to admire a llama from afar.</p>
               <p class="card-text"> JavaScript, Three.JS, Blender</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card border-white h-100">
+            <img class="card-img-top" src="media/CanvasPaintApp.png" alt="Canvas Paint App">
+            <div class="card-body">
+              <h4 class="card-title">HTML5 Canvas Paint App</h4>
+              <h6 class="card-subtitle mb-2 text-muted">Solo</h6>
+              <p class="card-text">An interactive web drawing application.</p>
+              <p class="card-text"> JavaScript</p>
+              <a class="btn btn-primary btn-outline-light" href="http://alexiabernardo.com/paint-app/paint-app.html">View Project</a>
             </div>
           </div>
         </div>
